--- a/index.html
+++ b/index.html
@@ -17,30 +17,32 @@
       			<h4 class="text-left text-muted">Formulario de Notas</h4><br>
       			<div class="col-12">
         			<div class="row">
-          				<div class="col-12">
-            				<table class="table">
-              					<thead class="thead-dark">
-                					<tr class="active">
-                  						<th><b>Código</b></th>
-                  						<th><b>Nombre</b></th>
-                  						<th><b>Nota</b></th>
-                					</tr>
-            					</thead>
-              				</table>
-          				</div>
-        			</div>
-        			<br>
-        			<div class="row">
           				<div class="form-group col-12 text-center">
-            				<button class="btn btn-primary" type="button" name="btnProcesar1" onclick="mostrarAlumnos()">Mostrar Alumnos</button>
+            				<button class="btn btn-primary" type="button" name="btnProcesar1" onclick="mostrarEstudiantes()">Mostrar Estudiantes</button>
                       		<button class="btn btn-primary" type="button" name="btnProcesar2" onclick="calcularPromedio()">Calcular Promedio</button>
             				<button class="btn btn-primary" type="button" name="btnProcesar3" onclick="calcularNotaMayor()">Calcular Nota Mayor</button>
             				<button class="btn btn-primary" type="button" name="btnProcesar4" onclick="calcularNotaMenor()">Calcular Nota Menor</button>
           				</div>
         			</div>
         				<br>
-        				<br>	
-        			<div class="row">
+        				<br>
+              <div class="row">
+                  <div class="col-12">
+                    <table class="table">
+                        <thead class="thead-dark">
+                          <tr class="active">
+                              <th><b>Código</b></th>
+                              <th><b>Nombre</b></th>
+                              <th><b>Nota</b></th>
+                          </tr>
+                      </thead>
+                      <tbody id="Estudiantes">
+                      </tbody>
+                      </table>
+                  </div>
+              </div>
+              <br>
+              <div class="row">
           				<div class="col-12">
             				<p id="NotaPromedio"></p>
           				</div>
