--- a/index.html
+++ b/index.html
@@ -3,24 +3,23 @@
 <html lang="es">
   	<head>
    		<meta charset="utf-8">
-		<meta name="viewport" content="width =device-width, user-scalable=no">
-		<title>Estudiantes</title>
+		  <meta name="viewport" content="width =device-width, user-scalable=no">
+		  <title>Estudiantes</title>
     	<link rel="stylesheet" href="css/estilos.css">
   	</head>
-   	<body class="container-fluid">
+   	<body class="container-fluid" onload="evento_onload()">
 	    <header class="col-12">
         	<h1>Evaluación de Estudiantes</h1>
     	</header>
 	    <section class="container contenedor">
     		<div class="col-12">
-      			<h4>Formulario de Notas</h4><br>
-      			<div class="col-12">
+      		  <div class="col-12">
         			<div class="row">
-          				<div class="form-group col-12 text-center">
-            				<button class="btn btn-primary" type="button" name="btnProcesar1" onclick="mostrarEstudiantes()">Mostrar Estudiantes</button>
-                      		<button class="btn btn-primary" type="button" name="btnProcesar2" onclick="calcularPromedio()">Calcular Promedio</button>
-            				<button class="btn btn-primary" type="button" name="btnProcesar3" onclick="calcularNotaMayor()">Nota Mayor</button>
-            				<button class="btn btn-primary" type="button" name="btnProcesar4" onclick="calcularNotaMenor()">Nota Menor</button>
+          				<div class="form-group col-12">
+            				<button class="btn btn-primary" type="button" onclick="mostrarEstudiantes()">Mostrar Estudiantes</button>
+                      		<button class="btn btn-primary" type="button" onclick="calcularPromedio()">Calcular Promedio</button>
+            				<button class="btn btn-primary" type="button" onclick="calcularNotaMayor()">Nota Mayor</button>
+            				<button class="btn btn-primary" type="button" onclick="calcularNotaMenor()">Nota Menor</button>
           				</div>
         			</div>
         				<br>
@@ -51,8 +50,7 @@
             				<p id="NotaMenor"></p>
           				</div>
         			</div>
-        			<br>
-      			</div>
+        		</div>
 		    </div>
     	</section>
 	    <script type="text/javascript" src="js/app.js"></script>
